syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.apass.pix.keymanager.endpoint";
option java_outer_classname = "PixKeymanager";
option objc_class_prefix = "HLW";

package br.com.zupacademy.apass.pix.keymanagergrpc.endpoint;

service RegistroDeChavePixService {
  rpc registra (RegistroDeChavePixRequest) returns (RegistroDeChavePixReply) {}
}

enum TiposDeChavePix {
  TIPO_CHAVE_UNKNOWN = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TiposDeConta {
  TIPO_CONTA_UNKNOWN = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistroDeChavePixRequest {
  string clienteId = 1;
  TiposDeChavePix tipoDeChave = 2;
  string valorChavePix = 3;
  TiposDeConta tipoConta = 4;
}

message RegistroDeChavePixReply {
  string message = 1;
}